GNOME Bugzilla – Bug 759534
dashdemux: clock compensation is not correctly used in get_fragment_waiting_time
Last modified: 2015-12-16 10:38:09 UTC
gst_dash_demux_get_clock_compensation returns a value in usec but is added to a GstClockTime in gst_dash_demux_stream_get_fragment_waiting_time. The result should be scaled with GST_USECOND
Created attachment 317490 [details] [review] proposed patch
commit 7c1b511e96d900fb786101cdba5a58792454d691 Author: Florin Apostol <florin.apostol@oregan.net> Date: Wed Dec 16 10:23:23 2015 +0000 adaptivedemux: fixed clock compensation in get_fragment_waiting_time Clock compensation is calculated in usec but is added to a GstClockTime value. https://bugzilla.gnome.org/show_bug.cgi?id=759534