adaptivedemux: fixed clock compensation in get_fragment_waiting_time

Clock compensation is calculated in usec but is added to a GstClockTime value.

https://bugzilla.gnome.org/show_bug.cgi?id=759534